Remove header border radius

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
   </script>
 <!-- 多说公共JS代码 end -->
 
-<!-- 在新窗口中打开 -->
+<!-- Open a new tab for each link -->
   <script type="text/javascript">
     function addBlankTargetForLinks () {
       $('a[href^="http"]').each(function(){
