--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </div>
 
     
-    <div id="top" data-toggle="tooltip" data-placement="left" title="back to the top">
+    <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
       <a href="javascript:;">
         <div class="arrow"></div>
         <div class="stick"></div>
@@ -31,7 +31,7 @@
           $(this).attr('target', '_blank');
       });
     }
-    //每次在有DOM插入时触发
+
     $(document).bind('DOMNodeInserted', function(event) {
       addBlankTargetForLinks();
     });
