--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,13 +20,7 @@ layout: default
       <a href="{{page.next.url | prepend:site.baseurl | replace:'//','/'}}">Next：{{page.next.title}}</a>
       {% endif %}
     </div>
-    <div class="post-area post comment">
-      <!-- 多说评论框 start -->
-      
-      <div class="ds-thread" data-thread-key="{{ page.id }}" data-title="{{ page.title }}" data-url="gaohaoyang.github.io{{ page.url }}"></div>
-      
-      <!-- 多说评论框 end -->
-    </div>
+    {% include comments.html %}
   </div>
 
   <div id="content" class="col-sm-3">
