Add google analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
 
     {% include footer.html %}
 
+    {% include googleanalytics.html %}
 
 <!-- Open a new tab for each link -->
   <script type="text/javascript">
