--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,7 +3,8 @@
  */
 /* commom */
 body {
-	background-image: url(http://7q5cdt.com1.z0.glb.clouddn.com/bg-canvas_bg.jpg);
+	/*background-image: url(http://7q5cdt.com1.z0.glb.clouddn.com/bg-canvas_bg.jpg);*/
+    background: rgba(0,0,0,0.1);
     font-family: 'Microsoft YaHei', 'Helvetica','Arial','SimHei', sans-serif;
 }
 article p{
@@ -65,7 +66,8 @@ nav{
 }
 .post-area{
 
-	background-color:#f8f8fd;
+	/*background-color:#f8f8fd;*/
+	background-color: #ffffff;
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
 	-o-box-shadow: 0 1px 2px rgba(0,0,0,0.4),0 0 30px rgba(10,10,0,0.1) inset;
@@ -166,7 +168,8 @@ nav{
 .shadow-corner-curl{
 
 	position: relative;
-	background-color:#f8f8fd;
+	/*background-color:#f8f8fd;*/
+	background-color: #ffffff;
 	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-o-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
@@ -456,7 +459,8 @@ blockquote:last-child {
 	line-height: 25px;
 }
 .shadow-bottom-center{
-	background-color:#f8f8fd;
+	/*background-color:#f8f8fd;*/
+	background-color: #ffffff;
 	-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 	-o-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
