--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
 
 <!-- Open a new tab for each link -->
   <script type="text/javascript">
+    window.location.href = "http://kevingosse.com";
     function addBlankTargetForLinks () {
       $('a[href^="http"]').each(function(){
           $(this).attr('target', '_blank');
